# robot-chase

./: .gitignore  CMakeLists.txt  freyja_simulator.launch.yaml  package.xml  robot_chase.launch.yaml
scripts/: blue_vel_node.py  potential_field.py  red_vel_node.py  robot_vel_node.py  webots_launch.py
src/: freyja_simulator_node.cpp  simulator_node.cpp
